first post update
minor updates

--- a/_posts/2019-02-01-week01.md
+++ b/_posts/2019-02-01-week01.md
@@ -3,14 +3,15 @@ layout: post
 title: Week 1
 ---
 
+## Difference between the definitions of Open Source and Free Software
 
 After having read [The Open Source Initiative's Open Source Definition](https://opensource.org/osd)
 and [The Free Software Foundation's Free Software Definition](https://www.gnu.org/philosophy/free-sw.html)
 , the difference between the two definitions is the naming and how people have established different views
-and approaches from it. Specifically, the term, "free," in free software refers to freedom and providing users
+and approaches from it. Specifically, the term, "free," in free software refers to **freedom** and providing users
 "the freedom to run, copy, distribute, study, change and improve the software," but the term can also connote "zero
 cost" or "give away," which could lead to misunderstandings. Thus, the term, open source, was introduced to reduce
-possible misunderstandings of the term, free software, because people believed it provided a clearer description 
+possible misunderstandings of free software because people believed it provided a clearer description 
 of the software and its creators’ intent for how it should be used. Though open source and free software have similar
 definitions and describe almost the same category of software, the definition of open source focuses more on requirements
 of the license of a program whereas the definition of free software focuses on the software being able to exercise
