completed assignment due by feb 1st
openstreetmaps blog post

--- a/_posts/2019-02-01-week01.md
+++ b/_posts/2019-02-01-week01.md
@@ -16,3 +16,14 @@ of the software and its creators’ intent for how it should be used. Though ope
 definitions and describe almost the same category of software, the definition of open source focuses more on requirements
 of the license of a program whereas the definition of free software focuses on the software being able to exercise
 the four freedoms. 
+
+**Update:** We had a class discussion on the differences between the definitions of Open Source and Free Software, and
+this is what we shared, which were similar to mine. As a class, we stated that Free Software is more like a **philosophy and/or 
+ideology** with a set of *freedoms*, and that Open Source is still a working definition. Another thing we discussed is that
+for Free Software, everything used must be considered free software, whereas everything used in Open Source does not need to
+be open source, only the source code that you are modifying.
+
+## Contributing to OpenStreetMaps
+
+This is my first time contributing to OpenStreetMaps, and it was very enjoyable. In class, my mentor, Jessica, taught our group the basics of OpenStreetMaps such as how to edit, save changes, etc. I was more familiar with my neighborhood, compared to Hunter and my hometown, so I decided to make changes there. The first change I made was removing Georgia Diner, a popular diner that [merged with Nevada Diner in 2013](https://qns.com/story/2018/02/12/georgia-diner-elmhurst-close-doors-march-merge-nevada-diner/). Following that, I removed the parking lot behind Georgia Diner, since it was torn down in 2017 and is currently under construction to create a commercial-residential building. Next, I added a fast food restaurant called [Cheers Cut](https://www.yelp.com/biz/cheers-cut-elmhurst-3) that was on the same block as the Grand Av-Newtown Station. In the same area, I updated the information of my local supermarket, [New Golden Sparkling](https://www.yelp.com/biz/new-golden-sparkling-elmhurst) or 新金麟超市(xin1 jin1 lin1 chao1 shi4). I have put the address and added in the hours of operation and its name.
+Lastly, I included more information for my local library, the [Elmhurst branch of Queens Library](http://www.queenslibrary.org/branch/elmhurst/?filters=ev_loc:93200000), also commonly referred to as Elmhurst Library. The information added was indicating that it is a civic building and wheelchair accessible, its hours of operation and address.
