--- a/_posts/2019-02-08-week02.md
+++ b/_posts/2019-02-08-week02.md
@@ -3,8 +3,12 @@ layout: post
 title: Week 2
 ---
 
+Hello! This week, we have so far practiced how to use Git by working on team activities. So far, we have practiced cloning, staging, commit, pushing, and pulling. Because this is my first time experimenting with Git, I received a lot of help from [this book](https://git-scm.com/book/en/v2) as well as from my peers. As of now, I have cloned my team's repository onto my local machine, and pushed a picture for our team icon. Because it is very interactive, I'm getting more used to how Git and its features work. No problems yet!
 
-This text should be replaced by your second post. 
+Additionally, we began to discuss how to contribute to an open source project and what should every open source project contain, which is a **code of conduct file**, **readme file**, **contributions file**, and **license file**. To deepen our understanding of contributing to open source projects, we read [GitHub's How to Contribute to Open Source](https://opensource.guide/how-to-contribute/) up to Chapter 4. In these chapters, it talked about the reason why should we contribute to open source and the perks of doing so, the definition of contributing and how there are many methods of contributing, the importance of knowing that each open source community is different, and the steps to find a open source project to contribute to. From this reading, I learned that there is more than just contributing code to open source projects. You can fix documentation, be a community leader, help review code. Moreover, there are more than just software projects and that you can contribute to **about** *anything* such as lists, books, recipes, etc. 
 
-The easiest way to make your second post is to edit this one. 
-Go into /_posts/ and update the 2019-02-08-week02.md file. 
+People don't need to be an expert at coding. There is a role suitable for everyone of different skillsets.
+
+For me, I feel like *fixing documentation* or *doing some organization*, such as the tasks listed in Section 2 of [GitHub's How to Contribute to Open Source](https://opensource.guide/how-to-contribute/), should be my first contributions to an open source project. I would love to contribute code and/or review other people's code, but I want to further enhance my skills first before doing so. Edits, such as when I contributed to OpenStreetMaps (my edits can be found [here](https://www.openstreetmap.org/user/mxsunny/history), was really fun, so I feel like if I can do something similar to that, it would be nice too.
+
+I don't know of a specific open source project that I would support as of yet, **but** I would ideally want to support and contribute to a game. Games, in my opinion, are a great way to connect with other people, and by contributing to a game, I would not only learn more about the technical side of creating/maintaining a game, but also help build a stronger, healthier community.
