--- a/_posts/2019-02-21-week04.md
+++ b/_posts/2019-02-21-week04.md
@@ -13,10 +13,10 @@ how many total contributors were there from the start to today. <br />
 
 I still find myself inexperienced, but if I had to propose another way of evaluating a project, it would be similar to that of the project evaluation assignment, but there will be a few changes. Instead of calculating the average of the total amount of days the twenty most recent pull requests and issues were open, I would just look at how many issues have been closed within the past two weeks, because that indicates that are people still contributing to the project itself. Granted, this would not show how long an issue or pull request had been opened, but knowing that there are people who are still resolving these things still can contribute to showing how active a project is. However, it is still important to know how long it has been opened, so maybe there could be a program or an API that can compute how long the top X amount of issues have been opened. <br />
 
-<h2> Current list of Contributions: </h2> <br />
+<h4> Current list of Contributions: </h4>
 <ul>
-	<li> [Grammatical and Spelling Issue in Jessica's week 2 blogpost](https://github.com/hunter-college-ossd-spr19/gutierrezjdr-weekly/issues/1)
-	<li> [Spelling Issue in Andrey's week 2 blogpost](https://github.com/hunter-college-ossd-spr19/Chocolate-Spaghet-weekly/issues/1)
+	<li> <a href="https://github.com/hunter-college-ossd-spr19/gutierrezjdr-weekly/issues/1">Grammatical and Spelling Issue in Jessica's week 2 blogpost</a>
+	<li> <a href="https://github.com/hunter-college-ossd-spr19/Chocolate-Spaghet-weekly/issues/1">Spelling Issue in Andrey's week 2 blogpost</a>
 </ul><br />
 	
 Thank you for reading!
