added more info into blogpost

--- a/_posts/2019-02-21-week04.md
+++ b/_posts/2019-02-21-week04.md
@@ -2,7 +2,7 @@
 layout: post
 title: Week 4
 ---
-<br />
+
 Last week, we have done project evaluations for the following open source projects: <a href="http://www.doxygen.nl/">DOxygen</a>, <a href="https://netflix.github.io/conductor/">Netflix Conductor</a>, and <a href="https://world.openfoodfacts.org/">OpenFoodFacts</a>.<br />
 
 In this week's blog post, I shall be <strong> reflecting </strong> on my experience with the project evaluation assignment of the projects listed above. <br />
@@ -15,8 +15,11 @@ I still find myself inexperienced, but if I had to propose another way of evalua
 
 <h4> Current list of Contributions: </h4>
 <ul>
-	<li> <a href="https://github.com/hunter-college-ossd-spr19/gutierrezjdr-weekly/issues/1">Grammatical and Spelling Issue in Jessica's week 2 blogpost</a>
-	<li> <a href="https://github.com/hunter-college-ossd-spr19/Chocolate-Spaghet-weekly/issues/1">Spelling Issue in Andrey's week 2 blogpost</a>
+	<li> <a href="https://github.com/hunter-college-ossd-spr19/gutierrezjdr-weekly/issues/1">Grammatical and Spelling Issue in Jessica's week 2 blogpost</a></li>
+	<li> <a href="https://github.com/hunter-college-ossd-spr19/Chocolate-Spaghet-weekly/issues/1">Spelling Issue in Andrey's week 2 blogpost</a></li>
 </ul><br />
 	
-Thank you for reading!
+Thank you for reading!<br />
+
+<h3> Update! </h3>
+Hello, just a quick update! I have fixed an <a href="https://github.com/hunter-college-ossd-spr19/mxmsunny-weekly/issues/1"> issue </a> that was posted by Jessica on my blogpost for week 2. She states that I have made grammatical errors and explictly tells me where it is and how the end result should be like. Additionally, we went over how to properly open an issue and what important information should be included in the issue. The information can be found <a href="http://www.compsci.hunter.cuny.edu/~sweiss/course_materials/csci395.86/issue_guidance.php"> here </a>. When I was opening issues on my classmates' repositories regarding their blogposts, I did not include the link to the blogpost, but rather I have only addressed the week of the blogpost the issue is addressing. We should instead include a link to the commit that the user has on GitHub and then refer to that to make changes because the content of the blogpost will continuously change if they make changes to that blogpost. As such, our issue would not make sense in the future. Thus, when opening an issue, we need to be clear, concise and link and refer to the specific commit that the issue is going to address.
