--- a/_posts/2019-02-28-week05.md
+++ b/_posts/2019-02-28-week05.md
@@ -5,7 +5,7 @@ title: Week 5
 
 Hey there! We have been tasked to narrow down the search of a project that we want to contribute to. For me, I have decided to contribute to
 the <strong>Open Source NYC App</strong>, which is a tool that will track the number of contributions. After attending the
-<em><a href="https://www.meetup.com/Open-Source-NYC/events/258592674/>Open Source NYC meetup</a><em> held on February 20th, the information,
+<em><a href="https://www.meetup.com/Open-Source-NYC/events/258592674/">Open Source NYC meetup</a></em> held on February 20th, the information,
 questions, ideas have all piqued my interest. Their goal is to use this tool for an event they are planning to hold over the summer. By tracking
 the number of contributions, they will rank the users on a leaderboard-esque ranking system. Another mandatory aspect of the project is that
 it is opt-in, so people would either have to log in/create an account or send an email of interest. Those who are on top of the leaderboard will
@@ -19,8 +19,7 @@ I would say, I am more interested in coding the web interface, designing the vis
 I am willing to learn, and make contributions. It's kind of daunting to start a project from scratch, but I am excited to see how our efforts and
 contributions will come into fruition.
 
-Additionally, we were tasked to read <u><a href="http://www.catb.org/~esr/writings/cathedral-bazaar/cathedral-bazaar/index.html>The Cathedral and the Bazaar
-</a></u>. This was a really interesting read as the author, Eric Steven Raymond, distinguishes the cathedral and bazaar styles of coding. In the 19 lessons he
+Additionally, we were tasked to read <u><a href="http://www.catb.org/~esr/writings/cathedral-bazaar/cathedral-bazaar/index.html">The Cathedral and the Bazaar</a></u>. This was a really interesting read as the author, Eric Steven Raymond, distinguishes the cathedral and bazaar styles of coding. In the 19 lessons he
 has stated in this reading, he shows us how to make a successful project. He uses Linux as his guiding example, as it was an inspiration for him to test out
 open source software. By contributing popclient, a POP(<em>Post Office Protocol</em> client that is used to check and deliver mail, he shortly gained ownership 
 from the original owner. After some changes, he released an early release to the public and many people began contributing to it, leading to more and more
