updated blogpost with info about Christos' visit

--- a/_posts/2019-02-28-week05.md
+++ b/_posts/2019-02-28-week05.md
@@ -15,7 +15,7 @@ and implement them to the app.
 
 In my case, I still am not too confident in my coding skills, but I hope that being part of this community and building this app as a team will help
 me not only improve my coding, but also my communication skills in a quasi-professional environment. Diving into my pool of strength and weaknesses,
-I would say, I am more interested in coding the web interface, designing the visuals, and back-end. Even though I'm not confident with my coding skills,
+I would say, I am more interested in mainly coding the web interface, designing the visuals, and hopefully back-end. Even though I'm not confident with my coding skills,
 I am willing to learn, and make contributions. It's kind of daunting to start a project from scratch, but I am excited to see how our efforts and
 contributions will come into fruition.
 
@@ -37,5 +37,14 @@ peers teach us. If we treat them nicely, they will treat us the same way, and so
 think that our method of solving a problem or completing a task is correct, but sometimes it's not necessarily the case. We must step back, reconsider everything and
 understand that there are other, and possibly better, ways to complete the task ahead. Last but not least, we should do things that we enjoy or find interesting as
 you will be more active and willing to think of ideas that would improve the situation.
+
+<h4>Update!</h4>
+We had the honor of having <strong><a href="https://reps.mozilla.org/u/bacharakis/>Christos Bacharakis</a></strong> from Mozilla coming to our class as aguest speaker. We have prepared some questions for him to answer, which can be found <a href="https://github.com/hunter-college-ossd-spr19/wiki/wiki/Questions-for-Christos-Bacharakis">here</a>.
+
+In this session, he began with an introduction of himself and his story of how he got into Open Source. His role is to mentor students on open source and how to get involved in the open source community. He had not only clearly explained Mozilla's goal of establishing an open web but also the steps and projects that they are taking to achieve it. Additionally, he showed an amazing <a href="https://fixme.ossn.club">website</a> that <em>helps contributors find open source projects based on their skills and abilities</em>. When Christos mentioned this in class and showed us how to use it, I was mindblown because I feel like it will be an exceptionally helpful tool in helping me get used to contributing to open source projects as I am still a beginner. In the end, he also passed around stickers!
+
+This one is personally my favorite:
+
+<img src="https://juststickers.in/wp-content/uploads/2017/11/firefox-nightly.png" alt="Firefox Nightly Sticker" align="middle">
 
 Thanks for reading!
