changed structure so it matches the other blogposts

--- a/_posts/2019-02-01-week01.md
+++ b/_posts/2019-02-01-week01.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 1
 ---
 
-## Difference between the definitions of Open Source and Free Software
+The difference between the definitions of Open Source and Free Software!
 
 After having read [The Open Source Initiative's Open Source Definition](https://opensource.org/osd)
 and [The Free Software Foundation's Free Software Definition](https://www.gnu.org/philosophy/free-sw.html)
