split a paragraph to make website less crowded

--- a/_posts/2019-02-28-week05.md
+++ b/_posts/2019-02-28-week05.md
@@ -4,8 +4,9 @@ title: Week 5
 ---
 
 Hey there! We have been tasked to narrow down the search of a project that we want to contribute to. For me, I have decided to contribute to
-the <strong>Open Source NYC App</strong>, which is a tool that will track the number of contributions. After attending the
-<em><a href="https://www.meetup.com/Open-Source-NYC/events/258592674/">Open Source NYC meetup</a></em> held on February 20th, the information,
+the <strong>Open Source NYC App</strong>, which is a tool that will track the number of contributions. 
+
+After attending the <em><a href="https://www.meetup.com/Open-Source-NYC/events/258592674/">Open Source NYC meetup</a></em> held on February 20th, the information,
 questions, ideas have all piqued my interest. Their goal is to use this tool for an event they are planning to hold over the summer. By tracking
 the number of contributions, they will rank the users on a leaderboard-esque ranking system. Another mandatory aspect of the project is that
 it is opt-in, so people would either have to log in/create an account or send an email of interest. Those who are on top of the leaderboard will
