added second half of week 6

--- a/_posts/2019-03-06-week06.md
+++ b/_posts/2019-03-06-week06.md
@@ -26,4 +26,26 @@ When people contribute to projects, you do <strong>not</strong> have the copyrig
 
 Last but not least, it's ketchup time! Throughout the video, Fleming uses the example of Bob and his library he created to assist with his thesis written about potatoes and frying them. He lists different scenarios to give us an understanding of what is considered copying and not copying, and how to allow people to use your code. Ketchup is a condiment that is usually put on fried foods to give it an oomph of sweetness and tanginess, making it taste better for some people. In OSS, people contribute on a project to improve its utlities or make it better for other users to use. The owner of the project in this case, would be the potato, and the contributors would be the ketchup. By working together, they are able to establish a sort of harmony and become something better. 
 
+<h2>Update!</h2>
+In class, we have discussed the Fleming video, and now I will be adding onto what the role of ketchup is. In addition to what I have stated above, ketchup is also considered an optimzation problem, which means that too much is not good, and too little is not good either. We must find <strong>the right amount so that there is progress</strong>.
+
+After watching the video, we have finalized our teams and projects that we will contribute to for the rest of the semester. I have stuck with the OSNY-App, and alongside 5 other classmates, we hope to be able to create this tool. We have been split into two teams: local and API, and I am part of the local team.
+
+Although I have limited knowledge, I do hope that I can still contribute as much as I can to facilitate the production of the app before the deadline.
+
+Because we are starting from scratch, we currently do not have any issues. However, there are some potential issues that we can come across and I would like to put them here. These are:
+<ol>
+	<li>What license should we choose?</li>
+	<li>How should people contribute?</li>
+	<li>How are we going to host the project?</li>
+</ol>
+
+These issues are important, in my opinion, because we need to come to a general consensus before letting others contribute or use the project. Without these important issues answered, users may misuse the tool or they will contribute in a way that is not preferred.
+
+<h4>Contributions!</h4>
+<ul>
+	<li>I editted more information on OpenStreetMap, which can be found <a href="https://www.openstreetmap.org/user/mxsunny/history#map=14/40.7537/-73.8998">here</a></li>
+	<li>I pointed out some typos on <a href="https://github.com/hunter-college-ossd-spr19/codesue-weekly/issues/1">Suzen's Week 4 blogpost</a></li>
+</ul>
+
 This was quite the long post, but thanks for reading!
