added link to OSNYapp repo

--- a/_posts/2019-03-06-week06.md
+++ b/_posts/2019-03-06-week06.md
@@ -29,7 +29,7 @@ Last but not least, it's ketchup time! Throughout the video, Fleming uses the ex
 <h2>Update!</h2>
 In class, we have discussed the Fleming video, and now I will be adding onto what the role of ketchup is. In addition to what I have stated above, ketchup is also considered an optimzation problem, which means that too much is not good, and too little is not good either. We must find <strong>the right amount so that there is progress</strong>.
 
-After watching the video, we have finalized our teams and projects that we will contribute to for the rest of the semester. I have stuck with the OSNY-App, and alongside 5 other classmates, we hope to be able to create this tool. We have been split into two teams: local and API, and I am part of the local team.
+After watching the video, we have finalized our teams and projects that we will contribute to for the rest of the semester. I have stuck with the OSNY-App, and alongside 5 other classmates, we hope to be able to create this tool. We have been split into two teams: local and API, and I am part of the local team. The repository can be found <a href="https://github.com/yizongk/OpenSource-NY">here</a>. So far, I hae submitted a pull request that updated the README and added the code of conduct.
 
 Although I have limited knowledge, I do hope that I can still contribute as much as I can to facilitate the production of the app before the deadline.
 
