--- a/_posts/2019-03-14-week07.md
+++ b/_posts/2019-03-14-week07.md
@@ -16,4 +16,52 @@ Moving on... Remember those three potential issues that I listed in my [week 6 b
 
 Right now, I am trying to set up a web app using ReactJS and do some styling on it. Once I manage to get something on there, I will submit a pull request! The hard part as of now is integrating the backend, but I'll figure that out with my teammates.
 
+<h3>A few days later...</h3>
+As of now, the frontend and backend are connected! Unfortunately, I wasn't much help with that part. However, I opened some pull requests:
+<ol>
+	<li>[My first pull request](https://github.com/opensource-ny/OpenSource-NY/pull/1), which is also my **first ever pull request on GitHub**, which added a CODE OF CONDUCT and updated the readme to include a summary of the app, was approved. *Yay!*</li>
+	<li>[My second pull request](https://github.com/opensource-ny/OpenSource-NY/pull/42) was adding a header and login field for the website. This would probably help with designing the rest of the website and backend since it is more than seeing the React logo spin forever. However, I closed it because we are not going to use the user/password fields, which is referenced [here](https://github.com/opensource-ny/OpenSource-NY/issues/36).</li>
+	<li>[My third pull request](https://github.com/opensource-ny/OpenSource-NY/pull/47) initially was going to update the remote link in the contributing file since the repo is now on another account, rather than Yi Zong's account. However, I made another commit on the same branch that fixed the problem in my second pull request. ~~Oops~~.</li>
+<ol>
+
+If my PR gets approved, the website would look like this for now:
+![tempweb](https://user-images.githubusercontent.com/43188391/54322785-f35b4280-45cc-11e9-9420-acd0aaa3955f.jpg)
+
+I'm hoping that we can all design a layout for the website as well as continue working concurrently on the frontend and backend. Although I'm not to sure how difficult it will be, I will try my best to contribute to the project whether it is documentation or styling the website. It's been a really fun learning experience for me, as I am learning more about pull requests, issues, forks, branches, and using Git.
+
+<h2>Patrick Masson</h2>
+We had the honor of having [Patrick Masson}(https://www.linkedin.com/in/patrick-masson-4a09b53/), General Manager of the Board of Directors of the Open Source Initiative, come to our class and give us a presentation on *Working in Open Source*. In his presentation, he went over the role of the Open Source Intiative, as well as showing us innumerable companies that uses open source such as, Amazon and Netflix. He went further into the business aspect of Open Source as well as providing models and lenses that should be considered.
+
+The concept of aligning the 3 lenses: Personal, Project, and Professional, is very important to understand, in my opinion. With the lenses aligned, you will not only be able to improve your own skills but also push the project in a better direction, which in turn can increase revenue and growth to the organization. It creates an engaging atmosphere in which organizations listen to the contributors' requests and making/accepting their changes. This gives people more motivation to see a project grow even more while improving their own skills since their requests are being considered. Also, I agree with Masson's statement of learning from your competitors. Both you and your competitors are implementing similar services or applications, which means that they can be an important asset when it comes to improving your own project or finding inspiration. You can learn how they are marketing their services or how they motivate contributors. In addition to learning from your competitors, you can also collaborate with them so that there will be mutual growth as well as more popularity. Lastly, another thing I want to comment on is his statement of anonymity. It was very interesting and clever since no one knows who you are behind the computer screen. You can create as many accounts as you would like and contribute to a project. You can have a separate account for each project you contribute to. Use anonymity to your advantage, but I can only think of a few areas where it would be useful such as hiding your main profile from the public or softening the blow from a silly mistake.
+
+<h2>Contributions</h2>
+I opened an issue on Jessica's [week 7 blogpost](https://github.com/hunter-college-ossd-spr19/gutierrezjdr-weekly/issues/2) where her images are not loaded on her blog's website.
+
 That's it for now! Thank you for reading!
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
