fixed styling again

--- a/_posts/2019-04-11-week11.md
+++ b/_posts/2019-04-11-week11.md
@@ -5,7 +5,7 @@ title: Week 11
 
 We were assigned to read two articles and give our comments and opinions about them. The first being [Have you seen these personalities in open source?](https://opensource.com/open-organization/18/11/design-communities-personality-types?utm_campaign=intrel) by Laura Hilliger, and the second being [25 Years Later: Interview with Linus Torvalds ](https://www.linuxjournal.com/content/25-years-later-interview-linus-torvalds).
 
-***Have you seen these personalities in open source?
+### Have you seen these personalities in open source?
 
 Laura Hilliger brings up the interesting discussion on how our personalities actually play a bigger role in open source than we have expected. She introduces the [Myer-Briggs Personality Test](https://www.myersbriggs.org/my-mbti-personality-type/mbti-basics/home.htm?bhcp=1), which can be taken [here](https://www.16personalities.com/free-personality-test). The first time I took it was in October, and I got INFJ, but this time I got INFP. Regardless of what personality one gets, we all are still living amongst each other.
 
@@ -15,7 +15,7 @@ It's okay to be an introvert or a person who learns better visually. Hilliger sp
 
 In my opinion, Hilliger makes a lot of good points in this article, especially the emphasis on open source being inclusive. She provides examples on how to accomdate for different types of personalities, and what really caught me off guard was the inclusion of the Myer-Briggs test. I knew that the topic of personalities would have to eventually be handled in open source, but Hilliger's incorporating of the test and pitting two contrasting qualities does shine more light on how we should solve most problems that occur. We should try to be adaptable, accomodating, and inclusive. I actually really enjoyed reading this article.
 
-***Interview with Linus Torvalds
+### Interview with Linus Torvalds
 
 After the first interview in 1994, Robert Young conducted another interview with Torvalds, the creator of Linux, 15 years later.
 
